welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:15: error: not found: value c
	point(c: Color);
              ^MethodsPicture:16: error: not found: value c
	avance; gauche; avance;point(c: Color);recule; droite;
                                     ^MethodsPicture:17: error: not found: value c
	avance; point(c: Color); avance; gauche;
                      ^